k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "ollama create llama3.2:prospector -f /root/models/Modelfile"]
        volumeMounts:
        - name: models
          mountPath: /root/models
        ports:
        - name: http
          containerPort: 11434
          protocol: TCP
      volumes:
      - name: models
        configMap:
          name: model-configmap
