k8s/zachbot-deployment.yaml
# flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zachbot
  namespace: ollama
  labels:
    app: zachbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zachbot
  template:
    metadata:
      labels:
        app: zachbot
    spec:
      containers:
      - name: zachbot
        image: partofaplan/zachbot:v0.7
        ports:
        - containerPort: 6500
---
apiVersion: v1
kind: Service
metadata:
  name: zachbot-service
  namespace: ollama
spec:
  selector:
    app: zachbot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 6500
  type: ClusterIP
