k8s/webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-ingress
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "90"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - webui.service
    secretName: ollama
  rules:
  - host: webui.service
    http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: webui
            port:
              number: 80
